--- a/problink-as-relationships/index.html
+++ b/problink-as-relationships/index.html
@@ -1,40 +1,39 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
  <head>
-  <title>Index of /~yuchenj/problink-as-relationships</title>
+  <title>ProbLink inferred AS relationships</title>
  </head>
  <body>
-<h1>Index of /~yuchenj/problink-as-relationships</h1>
+<h1>ProbLink inferred AS relationships</h1>
   <table>
-   <tr><th valign="top"><img src="/icons/blank.gif" alt="[ICO]"></th><th><a href="?C=N;O=D">Name</a></th><th><a href="?C=S;O=A">Size</a></th></tr>
+   <tr><th valign="top"><img src="icons/blank.gif" alt="[   ]"></th><th><a href="?C=N;O=D">Name</a></th><th><a href="?C=S;O=A">Size</a></th></tr>
    <tr><th colspan="5"><hr></th></tr>
-<tr><td valign="top"><img src="/icons/back.gif" alt="[PARENTDIR]"></td><td><a href="/~yuchenj/">Parent Directory</a></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20190101.tar.gz">20190101.tar.gz</a><td align="right">1.4M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20190201.tar.gz">20190201.tar.gz</a><td align="right">1.4M</td></tr> 
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20190301.tar.gz">20190301.tar.gz</a><td align="right">1.4M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20190401.tar.gz">20190401.tar.gz</a><td align="right">1.4M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20190501.tar.gz">20190501.tar.gz</a><td align="right">1.4M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20190601.tar.gz">20190601.tar.gz</a><td align="right">1.4M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20190701.tar.gz">20190701.tar.gz</a><td align="right">1.4M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20190801.tar.gz">20190801.tar.gz</a><td align="right">1.5M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20190901.tar.gz">20190901.tar.gz</a><td align="right">1.5M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20191001.tar.gz">20191001.tar.gz</a><td align="right">1.5M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20191101.tar.gz">20191101.tar.gz</a><td align="right">1.5M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20191201.tar.gz">20191201.tar.gz</a><td align="right">1.5M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20200101.tar.gz">20200101.tar.gz</a><td align="right">1.6M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20200201.tar.gz">20200201.tar.gz</a><td align="right">1.6M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20200301.tar.gz">20200301.tar.gz</a><td align="right">1.6M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20200401.tar.gz">20200401.tar.gz</a><td align="right">1.6M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20200501.tar.gz">20200501.tar.gz</a><td align="right">1.7M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20200601.tar.gz">20200601.tar.gz</a><td align="right">1.7M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20200701.tar.gz">20200701.tar.gz</a><td align="right">1.7M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20200801.tar.gz">20200801.tar.gz</a><td align="right">1.7M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20200901.tar.gz">20200901.tar.gz</a><td align="right">1.7M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20201001.tar.gz">20201001.tar.gz</a><td align="right">1.7M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20201101.tar.gz">20201101.tar.gz</a><td align="right">1.7M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20201201.tar.gz">20201201.tar.gz</a><td align="right">1.8M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20210101.tar.gz">20210101.tar.gz</a><td align="right">1.7M</td></tr>
-<tr><td valign="top"><img src="/icons/compressed.gif" alt="[   ]"></td><td><a href="20210201.tar.gz">20210201.tar.gz</a><td align="right">1.7M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20190101.tar.gz">20190101.tar.gz</a><td align="right">1.4M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20190201.tar.gz">20190201.tar.gz</a><td align="right">1.4M</td></tr> 
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20190301.tar.gz">20190301.tar.gz</a><td align="right">1.4M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20190401.tar.gz">20190401.tar.gz</a><td align="right">1.4M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20190501.tar.gz">20190501.tar.gz</a><td align="right">1.4M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20190601.tar.gz">20190601.tar.gz</a><td align="right">1.4M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20190701.tar.gz">20190701.tar.gz</a><td align="right">1.4M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20190801.tar.gz">20190801.tar.gz</a><td align="right">1.5M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20190901.tar.gz">20190901.tar.gz</a><td align="right">1.5M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20191001.tar.gz">20191001.tar.gz</a><td align="right">1.5M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20191101.tar.gz">20191101.tar.gz</a><td align="right">1.5M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20191201.tar.gz">20191201.tar.gz</a><td align="right">1.5M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20200101.tar.gz">20200101.tar.gz</a><td align="right">1.6M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20200201.tar.gz">20200201.tar.gz</a><td align="right">1.6M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20200301.tar.gz">20200301.tar.gz</a><td align="right">1.6M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20200401.tar.gz">20200401.tar.gz</a><td align="right">1.6M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20200501.tar.gz">20200501.tar.gz</a><td align="right">1.7M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20200601.tar.gz">20200601.tar.gz</a><td align="right">1.7M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20200701.tar.gz">20200701.tar.gz</a><td align="right">1.7M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20200801.tar.gz">20200801.tar.gz</a><td align="right">1.7M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20200901.tar.gz">20200901.tar.gz</a><td align="right">1.7M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20201001.tar.gz">20201001.tar.gz</a><td align="right">1.7M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20201101.tar.gz">20201101.tar.gz</a><td align="right">1.7M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20201201.tar.gz">20201201.tar.gz</a><td align="right">1.8M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20210101.tar.gz">20210101.tar.gz</a><td align="right">1.7M</td></tr>
+<tr><td valign="top"><img src="icons/compressed.gif" alt="[   ]"></td><td><a href="20210201.tar.gz">20210201.tar.gz</a><td align="right">1.7M</td></tr>
    <tr><th colspan="5"><hr></th></tr>
 </table>
 
