--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <ul>
                   <li> <div id="AutoLRS">[<font color='#900'><b>ICLR'21</b></font>] <font size="3"> <b>AutoLRS: Automatic Learning-Rate Schedule by Bayesian Optimization on the Fly</b></font></div>
                         <b>Yuchen Jin</b>, Tianyi Zhou, Liangyu Zhao, Yibo Zhu, Chuanxiong Guo, Marco Canini, Arvind Krishnamurthy</li>
-                        <a href=https://openreview.net/forum?id=SlrqM9_lyju>[OpenReview]</a> <a href=slides/autolrs_slides.pptx>[slides]</a> <a href=https://github.com/YuchenJin/autolrs>[code]</a> </a>
+                        <a href=papers/iclr21-autolrs.pdf>[pdf]</a> <a href=https://openreview.net/forum?id=SlrqM9_lyju>[OpenReview]</a> <a href=slides/autolrs_slides.pptx>[slides]</a> <a href=https://github.com/YuchenJin/autolrs>[code]</a> </a>
 		  <br>
 		  <br>
                   <li> <div id="nexus">[<font color='#900'><b>SOSP'19</b></font>] <font size="3"> <b>Nexus: A GPU Cluster Engine for Accelerating DNN-Based Video Analysis</b></font></div>
