--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 <div id="email">
                     <span class="text-success">yuchenj@cs.washington.edu</span><br>
                 </div>
+                <div id="social">
+                    <a href="https://github.com/YuchenJin"><img class="icon" src="img/github.png"></a> <a href="https://www.linkedin.com/in/yuchen-jin-11b329a1/"><img class="icon" src="img/linkedin.png"></a>
+                </div>
             </div>
         </div>
         <div class="row" id="bio">
