--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h1>Yuchen Jin</h1>
                 <div id="status">
                     <span class="text-success highlight">Co-founder and CTO</span> @ <a href="https://www.hyperbolic.xyz/">Hyperbolic</a><br>
-                    <span class="text-success highlight">Prev. Senior engineering manager and tech lead</span> @ <a href="http://octoml.ai/">OctoML</a><br>
+                    <span class="text-success highlight">Prev: Senior engineering manager and tech lead</span> @ <a href="http://octoml.ai/">OctoML</a><br>
                     <span class="text-success highlight">Ph.D.</span> @ <a href="http://syslab.cs.washington.edu">Systems Lab</a>, <a href="http://www.cs.washington.edu">UW CSE</a>
                 </div>
                 <div id="email">
