--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <span class="text-success">yuchenj@cs.washington.edu</span><br>
                 </div>
                 <div id="social">
-                    <a href="https://github.com/YuchenJin"><img class="icon" src="img/github.png"></a> <a href="https://www.linkedin.com/in/yuchen-jin-11b329a1/"><img class="icon" src="img/linkedin.png"></a>
+                    <a href="https://github.com/YuchenJin"><img class="icon" src="img/github.png"></a> <a href="https://www.linkedin.com/in/yuchen-jin-11b329a1/"><img class="icon" src="img/linkedin.png"></a> <a href="https://x.com/Yuchenj_UW"><img class="icon" src="img/X.png"></a>
                 </div>
             </div>
         </div>
@@ -46,6 +46,12 @@
             <div class="simple">
                 <h3>Publications</h3>
                 <ul>
+                  <li> <div id="relax">[<font color='#900'><b>ASPLOS'25</b></font>] <font size="3"> <b>Relax: Composable Abstractions for End-to-End Dynamic Machine Learning</b></font></div>
+        Ruihang Lai, Junru Shao, Siyuan Feng, Steven Lyubomirsky, Bohan Hou, Wuwei Lin, Zihao Ye, Hongyi Jin, <b>Yuchen Jin</b>, Jiawei Liu, Lesheng Jin, Yaxing Cai, Ziheng Jiang, Yong Wu, Sunghyun Park, Prakalp Srivastava, Jared Roesch, Todd Mowry, Tianqi Chen</li>
+        <a href=papers/asplos25-relax.pdf>[pdf]</a>
+        <br>
+        <br>
+
                   <li> <div id="AutoLRS">[<font color='#900'><b>ICLR'21</b></font>] <font size="3"> <b>AutoLRS: Automatic Learning-Rate Schedule by Bayesian Optimization on the Fly</b></font></div>
                         <b>Yuchen Jin</b>, Tianyi Zhou, Liangyu Zhao, Yibo Zhu, Chuanxiong Guo, Marco Canini, Arvind Krishnamurthy</li>
                         <a href=papers/iclr21-autolrs.pdf>[pdf]</a> <a href=https://openreview.net/forum?id=SlrqM9_lyju>[OpenReview]</a> <a href=slides/autolrs_slides.pptx>[slides]</a> <a href=https://github.com/YuchenJin/autolrs>[code]</a> </a>
