--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author"      content="Yuchen Jin">
-    <meta name="description" content="Yuchen Jin's homepage">
-    <meta name="keywords"    content="Yuchen Jin,UW,CSE,University of Washington,Yuchen">
+    <meta name="author"      content="Prabuddhi Kalpana">
+    <meta name="description" content="Prabuddhi Kalpana's homepage">
+    <meta name="keywords"    content="Prabuddhi Kalpana, University of Moratuwa">
     <title>Yuchen Jin's Homepage</title>
 
     <!-- —— CSS first: avoids FOUC —— -->
@@ -51,13 +51,13 @@
                 </div>
 
                 <div id="social">
-                    <a href="https://github.com/YuchenJin">
+                    <a href="https://github.com/prabuddhi-kalpana">
                         <img class="icon" src="img/github.png" alt="GitHub">
                     </a>
-                    <a href="https://www.linkedin.com/in/yuchen-jin-11b329a1/">
+                    <a href="https://www.linkedin.com/in/prabuddhi-rathnasekara/">
                         <img class="icon" src="img/linkedin.png" alt="LinkedIn">
                     </a>
-                    <a href="https://x.com/Yuchenj_UW">
+                    <a href="https://x.com/prabuddhi">
                         <img class="icon" src="img/X.png" alt="X / Twitter">
                     </a>
                 </div>
@@ -67,7 +67,7 @@
         <div class="row" id="bio">
             <div class="simple">
                 <h3>Biography</h3>
-                <p>I received my Ph.D. in Computer Science and Engineering at the University of Washington,
+                <p>I received my Ph.D. in Chemical and Process Engineering at the University of Moratuwa,
                    advised by <a href="http://www.cs.washington.edu/people/faculty/arvind">Arvind Krishnamurthy</a>.
                    I'm interested in machine-learning systems, AutoML, computer networks, and distributed systems.
                    I received my bachelor's degree from Huazhong University of Science and Technology in 2015.</p>
