--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author"      content="Prabuddhi Kalpana">
-    <meta name="description" content="Prabuddhi Kalpana's homepage">
+    <meta name="description" content="Kalpana's homepage">
     <meta name="keywords"    content="Prabuddhi Kalpana, University of Moratuwa">
-    <title>Yuchen Jin's Homepage</title>
+    <title>Kalpana's Homepage</title>
 
     <!-- —— CSS first: avoids FOUC —— -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -18,32 +18,22 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58146660-2"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-58146660-2');
-    </script>
 </head>
 
 <body>
     <div class="container" id="main">
         <div class="row">
             <div class="col-header">
-                <img id="avatar" src="img/yuchenj.jpeg" alt="Yuchen Jin">
+                <img id="avatar" src="img/kalpana.jpeg" alt="Yuchen Jin">
             </div>
             <div class="col-header">
-                <h1>Yuchen Jin</h1>
+                <h1>Prabuddhi Kalpana</h1>
                 <div id="status">
-                    <span class="text-success highlight">Co-founder and CTO</span> @
-                    <a href="https://www.hyperbolic.xyz/">Hyperbolic</a><br>
-                    <span class="text-success highlight">Prev: Senior engineering manager and tech lead</span> @
-                    <a href="http://octoml.ai/">OctoML</a><br>
+                    <span class="text-success highlight">Postdoc researcher</span><br>
+                    <span class="text-success highlight">Prev: graduate researcher</span> @
+                    <a href="https://uom.lk/">UoMoratuwa</a><br>
                     <span class="text-success highlight">Ph.D.</span> @
-                    <a href="http://syslab.cs.washington.edu">Systems Lab</a>,
-                    <a href="http://www.cs.washington.edu">UW CSE</a>
+                    <a href="https://uom.lk/cpe">ChemicalEngLab</a>
                 </div>
 
                 <div id="email">
