--- a/index.html
+++ b/index.html
@@ -57,10 +57,8 @@
         <div class="row" id="bio">
             <div class="simple">
                 <h3>Biography</h3>
-                <p>I received my Ph.D. in Chemical and Process Engineering at the University of Moratuwa,
-                   advised by <a href="http://www.cs.washington.edu/people/faculty/arvind">Arvind Krishnamurthy</a>.
-                   I'm interested in machine-learning systems, AutoML, computer networks, and distributed systems.
-                   I received my bachelor's degree from Huazhong University of Science and Technology in 2015.</p>
+                <p>I received my Ph.D. in Chemical and Process Engineering at the University of Moratuwa.
+                   I'm interested in environmental safety, hydrogen tech, and machine-learning.</p>
             </div>
         </div>
 
